force-app/main/default/objects/Performance_Appraisal__c/Performance_Appraisal__c.object-meta.xml
<CustomObject>
    <label>Performance Appraisal</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>PA</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performance Appraisals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>