force-app/main/default/objects/Performance_Appraisal__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rigs</fullName>
            </value>
            <value>
                <fullName>Camps</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
            <value>
                <fullName>Brisbane Office</fullName>
            </value>
            <value>
                <fullName>Roma Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>