force-app/main/default/objects/Performance_Appraisal__c/fields/Conducted_by__c.field-meta.xml
<CustomField>
    <fullName>Conducted_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conducted by</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Performance Appraisals (Conducted by)</relationshipLabel>
    <relationshipName>Performance_Appraisals1</relationshipName>
    <type>Lookup</type>
</CustomField>