force-app/main/default/objects/Performance_Appraisal__c/fields/Date_Conducted__c.field-meta.xml
<CustomField>
    <fullName>Date_Conducted__c</fullName>
    <label>Date Conducted</label>
    <type>Date</type>
</CustomField>