force-app/main/default/objects/Performance_Appraisal__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Name</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Performance Appraisals</relationshipLabel>
    <relationshipName>Performance_Appraisals</relationshipName>
    <type>Lookup</type>
</CustomField>