force-app/main/default/objects/Performance_Appraisal__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mid-Term Probation</fullName>
            </value>
            <value>
                <fullName>Final Probation</fullName>
            </value>
            <value>
                <fullName>Hitch Assessment</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Performance Assessment</fullName>
            </value>
            <value>
                <fullName>Performance Improvement Plan (PIP)</fullName>
            </value>
            <value>
                <fullName>SSE Management Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>