force-app/main/default/objects/Performance_Appraisal__c/fields/WD_Unit__c.field-meta.xml
<CustomField>
    <fullName>WD_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WD Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Performance Appraisals</relationshipLabel>
    <relationshipName>Performance_Appraisals</relationshipName>
    <type>Lookup</type>
</CustomField>