force-app/main/default/objects/Performance_Appraisal__c/recordTypes/PA.recordType-meta.xml
<RecordType>
    <fullName>PA</fullName>
    <active>true</active>
    <label>PA</label>
</RecordType>