force-app/main/default/objects/Performance_Appraisal__c/recordTypes/PA_sen_man.recordType-meta.xml
<RecordType>
    <fullName>PA_sen_man</fullName>
    <active>true</active>
    <label>PA - Senior Man</label>
</RecordType>